--- a/前端跨域问题解题大全.md
+++ b/前端跨域问题解题大全.md
@@ -1,13 +1,13 @@
 ## 开篇
-跨域？，作为一个前端开发过程中老生常谈的问题，这是我们既熟悉又陌生的点，既知道简单的处理，又在深层次的问题陷入困惑。 
+跨域？，作为一个前端开发过程中老生常谈的问题，这是我们既熟悉又陌生的点，既知道简单的处理，又在深层次的问题陷入困惑。  
 本篇文章将罗列出我们在跨域过程中遇到的常见问题，以及如何解决的办法，疏通我们对于跨域的一些疑惑。
 
 ## 什么是跨域？
-跨域是一种HTTP机制，他允许服务端指示来自其他域名的请求是否有权限访问其资源。
+跨域是一种HTTP机制，他允许服务端指示来自其他域名的请求是否有权限访问其资源。  
 跨域同样也依赖于浏览器的preflight机制，用来检查服务端是否允许跨域。
 
 ## 怎样会造成跨域？
-当我们从一个域名访问另外一个域名时，例如从a.qq.com -> b.qq.com， 
+当我们从一个域名访问另外一个域名时，例如从a.qq.com -> b.qq.com，  
 除了我们常见的XMLHttpRequest请求之外，其实还有其他的资源访问方式同样会造成跨域的问题：
 1. 基于XMLHttpRequest或 Fetch API的HTTP请求
 2. Web Fonts字体加载
@@ -19,7 +19,8 @@
 我们先从简单常见的一些方法开始，讨论如何解决或者避免跨域。
 
 #### 一、Access-Control1
-首先我们讨论最为常见的一种方式，既然跨域是一种HTTP协议的限制，那么通过设置HTTP属性来使其支持跨域便是我们通常解决这个问题最为常见的办法。
+首先我们讨论最为常见的一种方式，既然跨域是一种HTTP协议的限制，  
+那么通过设置HTTP属性来使其支持跨域便是我们通常解决这个问题最为常见的办法。  
 那么要如何设置HTTP协议才能使其支持跨域呢？，对于HTTP协议而言控制跨域访问的属性通常是这三个。
 
 ```code
@@ -30,7 +31,7 @@ Access-Control-Request-Headers: * // 允许跨域访问的请求头,
 当客服端跨域请求发送到服务端时，服务端开放Access-Control*响应，便可以开放跨域资源共享，这也是我们目前最为主流的跨域处理。
 
 ### 二、JSONP
-什么是JSONP？，正如我们在前面所提到的怎样才会造成跨域，而JSONP正是利用<script />标签不会受到跨域的限制，从而避免这个问题。
+什么是JSONP？，正如我们在前面所提到的怎样才会造成跨域，而JSONP正是利用<script />标签不会受到跨域的限制，从而避免这个问题。  
 让我们来看下如何通过JSNOP来实现跨域资源的访问：
 ```code
 // 回调函数接受返回值
