--- a/前端跨域问题解题大全.md
+++ b/前端跨域问题解题大全.md
@@ -31,7 +31,7 @@ Access-Control-Request-Headers: * // 允许跨域访问的请求头,
 当客服端跨域请求发送到服务端时，服务端开放Access-Control*响应，便可以开放跨域资源共享，这也是我们目前最为主流的跨域处理。
 
 ### 二、JSONP
-什么是JSONP？，正如我们在前面所提到的怎样才会造成跨域，而JSONP正是利用<script />标签不会受到跨域的限制，从而避免这个问题。  
+什么是JSONP？，正如我们在前面所提到的怎样才会造成跨域，而JSONP正是利用`<script />`标签不会受到跨域的限制，从而避免这个问题。  
 让我们来看下如何通过JSNOP来实现跨域资源的访问：
 ```code
 // 回调函数接受返回值
