--- a/前端跨域问题解题大全.md
+++ b/前端跨域问题解题大全.md
@@ -177,7 +177,7 @@ app.use('/api', createProxyMiddleware({
 ## 跨域报错了怎么办？
 最后我们聊一下在跨域过程中可能遇到的错误，以便我们更好的知悉和应对一些意外的错误。
 
-#### CORS request external redirect not allowed
+#### ERROR：CORS request external redirect not allowed
 redirect not allowed出现在当发起的跨域请求并没有被服务端争取返回，而是返回了重定向到其他的域名时，例如：
 ```code
 // 从A向B发起跨域请求
@@ -191,12 +191,12 @@ Error: CORS request external redirect not allowed
 这种错误经常发生在前端发起一个跨域请求，但是服务端返回30x重定向的情况下，  
 在这种情况下服务端的30x重定向将不会成功，而会报错。
 
-#### Credential is not supported if the CORS header ‘Access-Control-Allow-Origin’ is ‘*’
+#### ERROR：Credential is not supported if the CORS header ‘Access-Control-Allow-Origin’ is ‘*’
 这种情况出现在客户端请求希望携带credentials标签以传输Cookie时，而服务端`Access-Control-Allow-Origin: *`却返回`*`通配符。  
 此时应将`Access-Control-Allow-Origin`修改为可以允许跨域访问的域名，而非`*`通配符。  
 如若不需要`Cookie`传输认证，亦可将`withCredentials`设置为`false`关闭credentials认证。
 
-#### missing token ‘xyz’ in CORS header ‘Access-Control-Allow-Headers’ from CORS preflight
+#### ERROR：missing token ‘xyz’ in CORS header ‘Access-Control-Allow-Headers’ from CORS preflight
 `missing token ‘xyz'`意味着跨域请求头中包含了不被允许的请求头字段，这种错误常常发生在`preflight`预请求中，  
 在预请求头中包含了不被允许携带的请求字段而导致了后续的正式跨域请求错误。  
 而这种情况下的错误便需要我们对修改请求头字段或修改`Access-Control-Allow-Headers`允许携带的字段信息。
