--- a/如何构造一个简单的正则表达式解析引擎？.md
+++ b/如何构造一个简单的正则表达式解析引擎？.md
@@ -3,11 +3,11 @@
 这里我们会先简单描述一下文章后面会用到的一些技术用语，以便更好的理解文章。
 
 #### 什么是NFA(不确定有穷自动机)？
-有穷自动机是识别器的一种，他们只能对每个简单的输入回答“是”或“否”，自动机是一种有向图结构，他们有且离开该状态、以该符合为标号仅有一条边。
-一个不确定的有穷自动机包括至少下面几个部分：
+有穷自动机是识别器的一种，他们只能对每个简单的输入回答“是”或“否”，自动机是一种有向图结构，  
+他们有且离开该状态、以该符合为标号仅有一条边。一个不确定的有穷自动机包括至少下面几个部分：
 - 有穷的状态集合S
 - 一个输入集合集合∈
-- 状态转换函数fn，以及起始状态α0
+- 状态转换函数fn，以及起始状态α0  
 有穷自动机从起始状态开始经过N次判断转换必定会达到终点。
 
 #### 语法分析器
