--- a/如何构造一个简单的正则表达式解析引擎？.md
+++ b/如何构造一个简单的正则表达式解析引擎？.md
@@ -16,9 +16,9 @@
 - 语法定义  
 对于语法定义而言首先需要确定的是文法，何为文法，文法是一个符号集合, 他是一个分析器所需要的最为基本的全部符号。  
 在这个正则表达式解析器中，他们是`TESQF()|\.*`，这也是最为简单的正则表达式引擎所需的基本符号。  
-在用了基本的文法词汇之后，我们对文法进行推导，构建语法分析树🌲，确定语法的二义性和优先级。
+在得到了基本的文法词汇之后，我们开始对文法进行推导，构建语法分析树🌲，确定语法的二义性和优先级。
 
-- 语法制导翻译
+- 语法制导翻译  
 当我们拥有了语法的定义之后，我们如何对输入的正则表达式，例如：`\d+`，如何将其转换成上述定义的语法。  
 这便是语法制导翻译负责的事情了，首先我们需要确定表达式`expr`，也就是如何将字符串转换成文法。例如：  
   ```code
