--- a/如何构造一个简单的正则表达式解析引擎？.md
+++ b/如何构造一个简单的正则表达式解析引擎？.md
@@ -19,7 +19,7 @@
 在得到了基本的文法词汇之后，我们开始对文法进行推导，构建语法分析树🌲，确定语法的二义性和优先级。
 
 - 语法制导翻译  
-当我们拥有了语法的定义之后，我们如何对输入的正则表达式，例如：`\d+`，如何将其转换成上述定义的语法。  
+当我们拥有了语法的定义之后，我们如何对输入的正则表达式，例如：`\d+`将其转换成上述定义的语法。  
 这便是语法制导翻译负责的事情了，首先我们需要确定表达式`expr`，也就是如何将字符串转换成文法。例如：  
   ```code
   expr -> expr1 + term
@@ -28,7 +28,7 @@
   翻译 term；
   处理 +;
   ````
-对之前得到的语法分析树🌲进行前序遍历，得到语法表达式集合，从而完成语法的制导翻译。
+  然后对之前得到的语法分析树🌲进行前序遍历，得到语法表达式集合，从而完成语法的制导翻译。
 
 - 语法分析
 语法分析是对字符串`\d+`进行文法分析并判断其何时该进入语法翻译、何时该结束的过程。而这也是我们整个解析器的实际代码的开始。
