--- a/如何构造一个简单的正则表达式解析引擎？.md
+++ b/如何构造一个简单的正则表达式解析引擎？.md
@@ -58,12 +58,12 @@
     }
   }
   ```
-  此时我们便会结合之前已经构建好的有穷自动机与语法分析树，对语法进行自顶向下的分析。执行语法制导翻译，从而完成对于整个字符的解析。
+  此时我们便会结合之前已经构建好的有穷自动机与语法分析树，对语法进行自顶向下的分析，  
+  执行语法制导翻译，从而完成对于整个字符的解析。
 
 
 # 正篇：Regex-Resolver
-基于NFA(不确定有穷自动机)与自底向上语法分析构造的正则表达式解析器 
-[在线测试地址](http://liangljuan.com/regex)
+在简单介绍了一些基本的技术用语之后，我们正式开始了构建基于NFA(不确定有穷自动机)与自底向上语法分析构造的正则表达式解析器。
 
 ### Regex-Resolver流程构造剖析:
 
