--- a/浏览器内部机制--多进程架构.md
+++ b/浏览器内部机制--多进程架构.md
@@ -15,7 +15,7 @@
 
 > CPU
 
-![image](/uploads/c767e0b7609bf8856d7e7351946cffd0/image.png)
+![image](https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/img/brower-.png)
 
 
 
