--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -2,3 +2,6 @@
 在写这篇文章的时候，我突然想起来了我中学数学老师说过的一句话：“人其实是很懒的，就是因为懒，所以才逼的自己不断去创造各种东西，然后让自己变得更懒，哈哈哈”。  
 曾经刚开始的时候我其实不认可他说的这句话，但现在想来却发现，难道人类不正是如此，在不断的追求更便捷快速的生活之下去不停的创造来使得自己的生活更加美好。  
 是的，工具其实是非常重要的东西，工具使得我们的生活更加便捷，使得世界不断进步，因为工具的创造才使得人类文明得以如此与众不同。
+
+## 前端的工程化之路
+回到我们本文的正题，首先我们谈谈前端的工程化之路，是如何一步步坎坷向上的。
