--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -6,7 +6,7 @@
 是的，工具其实是非常重要的东西，工具使得我们的生活更加便捷，使得世界不断进步，因为工具的创造才使得人类文明得以如此与众不同。
 
 ## 前端的工程化之路
-回到我们本文的正题，首先我们谈谈前端的工程化之路，是如何一步步坎坷向上的。
+回到我们本文的正题，首先我们谈谈前端的工程化之路，是如何一步步坎坷向上的，然后又是如何变成我们现在前端开发中必不可少的攻城利器。
 
 ## 备注：
 作者：Hope(494873674@qq.com)，于2022年3月10日写于个人博客，转载请注明来源。
