--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -9,7 +9,7 @@
 回到我们本文的正题，首先我们谈谈前端的工程化之路，是如何一步步坎坷向上的，然后又是如何变成我们现在前端开发中必不可少的攻城利器。 
 
 
-那么是时候开始正式介绍我们前端工程师的这些好帮手了。
+那么接下来我们将从不同的方向出发开始正式介绍我们前端工程师的这些好帮手了。
 
 ## 开发调试与debug
 
