--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -6,20 +6,43 @@
 是的，工具其实是非常重要的东西，工具使得我们的生活更加便捷，使得世界不断进步，因为工具的创造才使得人类文明得以如此与众不同。
 
 ## 前端工程化的演变之路
-回到我们本文的正题，首先我们谈谈前端的工程化之路，是如何一步步坎坷向上的，然后又是如何变成我们现在前端开发中必不可少的攻城利器。 
 
+回到我们本文的正题，首先我们谈谈前端的工程化之路，是如何一步步坎坷向上的，然后又是如何变成我们现在开发中必不可少的攻城利器。 
+
+### 远古时代
+
+话说“天地初开，万物混沌”，啊呸，扯远了哈哈哈，还记得我刚开始工作那会那是2016年，当时jQuery还是前端开发的主要工具，  
+
+当时前端还不叫工程师，那时的人们亲切的称呼我们为“切图仔”，
 
 那么接下来我们将从不同的方向出发开始正式介绍我们前端工程师的这些好帮手了。
 
-## 开发调试与debug
+## 开发调试
+
+### 脚手架CLI
+
+### 浏览器调试
+
+### 
+
+### 接口调试
+
+### 移动端调试工具
 
 ## 性能优化
 
 ## 编译部署
 
-## 项目监测
+## 性能监测
 
-## 移动端设备调试
+
+## 总结
+
+本篇文章旨在介绍前端工具的重要性，并不是一篇严格的技术文章，所以用词上面没那么讲究。  
+
+本文介绍了前端开发工具的方方面面，从前端技术的演变到开发调试、编译部署、性能监测等不同方向介绍了各种不同的工具，  
+
+希望能给大家在前端开发工具上带来一个较为全面的介绍。
 
 ## 备注：
 作者：Hope(494873674@qq.com)，于2022年3月10日写于个人博客，转载请注明来源。
