--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -11,9 +11,26 @@
 
 ### 远古时代
 
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/images.jpeg" />
+
 话说“天地初开，万物混沌”，啊呸，扯远了哈哈哈，还记得我刚开始工作那会那是2016年，当时jQuery还是前端开发的主要工具，  
 
-当时前端还不叫工程师，那时的人们亲切的称呼我们为“切图仔”，
+当时前端还不叫工程师，那时的人们亲切的称呼我们为“切图仔”，那是一个没有任何话语的时代。  
+
+前端的代码不是jQuery直接写，就是在后端的MVC架构之下混搭着后端的代码一起，可恶啊，那个时候我们真的是卑微啊，人尽可欺。  
+
+当然农民也终有翻身做主的那一天，随着Angualr、React、Vue这样的MVVM框架的兴起，我们才终于有了崛起的那一天。
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/vue-angular.jpeg" />
+
+
+### 当代的前端架构体系
+
+现如今随着MVVM框架的兴起，以及Web重要性的日益突出，各种前端的开发工具如gulp、react、
+
+
+
+
 
 那么接下来我们将从不同的方向出发开始正式介绍我们前端工程师的这些好帮手了。
 
@@ -27,9 +44,11 @@
 
 ### 接口调试
 
-### 移动端调试工具
+### 移动端调试
 
 ## 性能优化
+
+## 单元测试
 
 ## 编译部署
 
