--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -26,7 +26,9 @@
 
 ### 当代的前端架构体系
 
-现如今随着MVVM框架的兴起，以及Web重要性的日益突出，各种前端的开发工具如gulp、react、
+现如今随着MVVM框架的兴起，以及Web重要性的日益突出，各种各样从gulp、react、vite这样的开发工具，  
+
+再到require、umd、typescript这样的js模块化，各种前端开发工具如雨后春笋般层出不穷。
 
 
 
@@ -51,6 +53,10 @@
 ## 单元测试
 
 ## 编译部署
+
+### 前端自动化
+
+### CI/CD
 
 ## 性能监测
 
