--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -38,6 +38,10 @@
 
 ## 开发调试
 
+### 样式处理
+
+### Typescript
+
 ### 脚手架CLI
 
 ### 浏览器调试
@@ -50,7 +54,19 @@
 
 ## 性能优化
 
+### 模块化打包
+
+### 代码压缩
+
+### SSR
+
+### 
+
 ## 单元测试
+
+### Jest
+
+### Mocha
 
 ## 编译部署
 
@@ -61,6 +77,8 @@
 ### Nginx反向代理
 
 ## 性能监测
+
+### Sentry
 
 
 ## 总结
