--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -28,10 +28,9 @@
 
 现如今随着MVVM框架的兴起，以及Web重要性的日益突出，各种各样从gulp、react、vite这样的开发工具，  
 
-再到require、umd、typescript这样的js模块化，各种前端开发工具如雨后春笋般层出不穷。
+再到require、umd、typescript这样的js模块化，各种前端开发工具如雨后春笋般层出不穷。  
 
-
-
+现如今的前端工程体系已经形成了以webpack这样的开发工具为主
 
 
 那么接下来我们将从不同的方向出发开始正式介绍我们前端工程师的这些好帮手了。
@@ -62,6 +61,8 @@
 
 ### 
 
+## Node.js
+
 ## 单元测试
 
 ### Jest
@@ -76,9 +77,12 @@
 
 ### Nginx反向代理
 
-## 性能监测
+## 性能与错误监测
 
 ### Sentry
+
+## 数据分析
+
 
 
 ## 总结
