--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -26,20 +26,50 @@
 
 ### 当代的前端架构体系
 
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/%E5%89%8D%E7%AB%AF%E5%B7%A5%E7%A8%8B%E5%8C%96.png" />
+
+
 现如今随着MVVM框架的兴起，以及Web重要性的日益突出，各种各样从gulp、react、vite这样的开发工具，  
 
 再到require、umd、typescript这样的js模块化，各种前端开发工具如雨后春笋般层出不穷。  
 
-现如今的前端工程体系已经形成了以webpack这样的开发工具为主
+前端工程体系已经形成了集开发、调试、部署、监控、测试等完整的产业链结构，接下来就让我们从不同的方向出发开始正式介绍  
 
-
-那么接下来我们将从不同的方向出发开始正式介绍我们前端工程师的这些好帮手了。
+这些我们前端工程师的好帮手了。
 
 ## 开发调试
 
+### 项目构建工具
+
+#### webpack
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/wepack.png" />
+
+
+
+#### gulp
+
+
+#### vite
+
+#### snowpack
+
+
 ### 样式处理
 
-### Typescript
+#### less
+
+#### scss
+
+#### css-module
+
+### js模块化
+
+#### require.js
+
+#### babel
+
+#### Typescript
 
 ### 脚手架CLI
 
@@ -53,13 +83,11 @@
 
 ## 性能优化
 
-### 模块化打包
-
 ### 代码压缩
 
-### SSR
+### 模块化打包
 
-### 
+### SSR
 
 ## Node.js
 
@@ -71,9 +99,7 @@
 
 ## 编译部署
 
-### 前端自动化
-
-### CI/CD
+### 前端自动化-CI与CD
 
 ### Nginx反向代理
 
@@ -91,7 +117,7 @@
 
 本文介绍了前端开发工具的方方面面，从前端技术的演变到开发调试、编译部署、性能监测等不同方向介绍了各种不同的工具，  
 
-希望能给大家在前端开发工具上带来一个较为全面的介绍。
+希望能给大家在前端开发工具上带来一个较为全面的介绍，同时也能对自身对于前端工程化的使用更加深入。
 
 ## 备注：
 作者：Hope(494873674@qq.com)，于2022年3月10日写于个人博客，转载请注明来源。
