--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -35,7 +35,9 @@
 
 前端工程体系已经形成了集开发、调试、部署、监控、测试等完整的产业链结构，接下来就让我们从不同的方向出发开始正式介绍  
 
-这些我们前端工程师的好帮手了。
+这些我们前端工程师的好帮手了。  
+
+由于本文介绍工具繁多，这里每个工具仅做简单介绍，重在为大家给整个前端工程体系提供一个全局的概览。
 
 ## 开发调试
 
@@ -43,12 +45,21 @@
 
 #### webpack
 
+Webpack是一个前端资源加载和打包工具。它会将静态资源，如JavaScript、CSS、图片等文件统一打包处理，webpack将这些静态资源文件称之为模块。webpack支持AMD和CommonJS，以及其他的一些模块系统，并且兼容多种JS书写规范，可以处理模块间的依赖关系，所以具有更强大的JS模块化的功能，它能对静态资源进行统一的管理以及打包发布。
+
 <img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/wepack.png" />
 
+下载地址：https://webpack.js.org/
 
 
 #### gulp
 
+与webpack相同，Gulp同样也是一个构建工具。Gulp 是基于 Node.js 的自动化任务运行器，它能自动化地完成前端代码的测试、检查、合并、压缩、格式化等操作。
+与webpack不同的是Gulp是一个流式构建工具，其任务也是以队列的执行方式来执行。
+
+<img width="100" src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/gulp-2x.png" />
+
+下载地址：https://gulpjs.com/
 
 #### vite
 
