--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -63,7 +63,19 @@ Webpack是一个前端资源加载和打包工具。它会将静态资源，如J
 
 #### vite
 
+Vite.js 是Vue3所新推出的脚手架构建工具，Vite.js在基于Gulp的基础上引入了snowpack的快速构建的理念。它采用了全新的unbundle思想来提升整体的前端开发体验。比起传统的webpack构建，在性能速度上都有了质的提高。
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/1_uaxRIvHMoINIB4caPRKTwQ.png" />
+
+下载地址：https://vitejs.dev/
+
 #### snowpack
+
+与Vite类似snowpack是一个新一代的构建工具，它具有启动快、热更新速度非常快、无需node_modules参与构建，完全浏览器模块化加载代码等功能。
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/maxresdefault.jpg" />
+
+下载地址：https://www.snowpack.dev/
 
 
 ### 样式处理
