--- a/工具是第一生产力.md
+++ b/工具是第一生产力.md
@@ -73,7 +73,7 @@ Vite.js 是Vue3所新推出的脚手架构建工具，Vite.js在基于Gulp的基
 
 与Vite类似snowpack是一个新一代的构建工具，它具有启动快、热更新速度非常快、无需node_modules参与构建，完全浏览器模块化加载代码等功能。
 
-<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/maxresdefault.jpg" />
+<img width="300" src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/maxresdefault.jpg" />
 
 下载地址：https://www.snowpack.dev/
 
@@ -94,15 +94,13 @@ Vite.js 是Vue3所新推出的脚手架构建工具，Vite.js在基于Gulp的基
 
 #### Typescript
 
-### 脚手架CLI
+### 调试工具
 
-### 浏览器调试
+#### 浏览器调试
 
-### 
+#### 接口调试
 
-### 接口调试
-
-### 移动端调试
+#### 移动端调试
 
 ## 性能优化
 
