--- a/成为前端技术管理的基本技能.md
+++ b/成为前端技术管理的基本技能.md
@@ -12,4 +12,12 @@
 
 不过学习基础知识是很枯燥的事情，短期内也不会有明显效果，所以更需要耐心和坚持。基础扎实了，接下来根据发展方向的不同，就可以自己选择性的去学习了。
 
-## 
+## 前端技能
+
+作为一名前端工程师，前端技能点树是你必备的
+
+## 时间管理
+
+## 项目管理
+
+## 学习能力
