--- a/成为一名前端技术管理的基本技能.md
+++ b/成为一名前端技术管理的基本技能.md
@@ -14,9 +14,13 @@
 
 ## 前端技能
 
-作为一名前端工程师，前端技能点树是你必备的
+作为一名前端工程师，前端技能点树是你打怪升级之后必须要点满的东西。当工作一年时，此时的你初出茅庐不谙世事，这个时候你所需要的重点是前面我们所提到的计算机方面的基础知识，这是你未来升职加薪的基础。当然你也不能缺少作为一名前端工程师的基本能力，简单来说，此时的你必备的基础能力包括JavaScript的运用、Vue、React这样的前端框架，你需要对前端的知识体系有一个总览。除此以外，你也需要那些工作中的基础能力，比如：git分支管理、项目开发的流程、如何去分配好自己的工作与生活，不要去忽略这些看似简单的东西，他们同样是你工作中必备的环节。  
+
+成为一名高级前端工程师，当工作三年以后，此时的你应当具备成熟的开发能力，不再是哪个一碰到问题就要
 
 ## 时间管理
+
+时间管理最有用的我认为就是《高效能人士的七个习惯》里提到的“要事第一”原则，它的核心就是四象限。顺便提一下，史蒂芬·柯维的这本书，很值得一看，我看过好几遍，获益良多。 
 
 ## 项目管理
 
