--- a/成为一名前端技术管理的基本技能.md
+++ b/成为一名前端技术管理的基本技能.md
@@ -16,7 +16,9 @@
 
 作为一名前端工程师，前端技能点树是你打怪升级之后必须要点满的东西。当工作一年时，此时的你初出茅庐不谙世事，这个时候你所需要的重点是前面我们所提到的计算机方面的基础知识，这是你未来升职加薪的基础。当然你也不能缺少作为一名前端工程师的基本能力，简单来说，此时的你必备的基础能力包括JavaScript的运用、Vue、React这样的前端框架，你需要对前端的知识体系有一个总览。除此以外，你也需要那些工作中的基础能力，比如：git分支管理、项目开发的流程、如何去分配好自己的工作与生活，不要去忽略这些看似简单的东西，他们同样是你工作中必备的环节。  
 
-成为一名高级前端工程师，当工作三年以后，此时的你应当具备成熟的开发能力，不再是哪个一碰到问题就要
+成为一名高级前端工程师，当工作三年以后，此时的你应当具备成熟的开发能力，不再是哪个一碰到问题就要折腾半天的新人了，此时的你应该是团队开发中的中流砥柱，有能力去独立负责项目的开发，在某一两个领域有着自己较为深入的理解，能够对整个前端的知识体系有着较为成熟的经验，去开始尝试在前端架构、组件设计等方面做出自己的尝试。  
+
+最后，当你工作六七年以后，恭喜你你已经是一个职场的老油条了(咳咳，老手了)，成熟的项目开发经验、优秀的问题处理能力、良好的代码架构书写等等，这些是你必备的，但是仅仅这样你就能当上一名前端技术管理吗？，答案是不够的，作为一名管理者，首先你要最清楚的其实是自身角色的转换，你不再是一名独立的开发，而是一名服务人员，角色意识的转换才是作为一名管理人员的第一步。你要清楚此时你更多的职责是对项目对团队负责，既要服务好上面的产品与需求，也需要服务好下面的团队成员。去帮助解决好开发过程的各种问题，甚至一些繁琐之事，要将原本的开发为主，抽离时间转换成为为持续提升团队交付质量、提升团队价值上努力。
 
 ## 时间管理
 
