--- a/成为一名前端技术管理的基本技能.md
+++ b/成为一名前端技术管理的基本技能.md
@@ -24,6 +24,44 @@
 
 时间管理最有用的我认为就是《高效能人士的七个习惯》里提到的“要事第一”原则，它的核心就是四象限。顺便提一下，史蒂芬·柯维的这本书，很值得一看，我看过好几遍，获益良多。 
 
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/img/asdpohohot.png" />
+
+第四象限，不重要不紧急。 比如上网、游戏、购物、聊天、看朋友圈等。这些事情偶尔作为生活调节没有问题，但切记不可沉溺。有些人总抱怨自己没有时间学习，其实可以看一下，自己是不是花了太多时间在这一象限的事情上。
+
+第三象限，紧急不重要。 比如不速之客、不重要的会议、日常的琐碎工作。对这些事，先考虑是否可以拒绝？是否值得自动化？或者是否有其他方式优化流程？如果都不是，那就尽快做掉。
+
+第二象限，重要不紧急。 比如自动化或者改进效率的事情、工作规划、回顾总结、学习分享等等。这是最重要的象限（注意，最重要的不是第一象限），我们应该把大部分时间花在这里。这里的事情，大部分是着眼于未来，可以提升自己能力、改进工作效率的事情，但往往由于不是那么急迫，会被人忽视。
+
+第一象限，重要且紧急。 比如线上故障、Deadline 等。这些都是要立即处理的事情。但其实这里的很多内容是从第二象限转变过来的，例如本来一个任务不紧急，但一拖再拖就变成紧急任务了。又比如如果我们把监控、稳定性做好的话，那线上故障就会减少。所以对待这个象限的原则是，尽量想办法减少这个象限的内容。
+
+每次遇到事情，考虑一下它是哪个象限的，再决定如何处理。总之它给我们不少启示：
+
+把自己的时间花在重要不紧急的事情（第二象限）上。
+学会取舍。有的事情不一定要做，或者不一定现在要做。
+学会协作。有的事情不一定要自己做，可以找人一起帮忙。
+不要拖延。拖延会把不紧急的事情变成紧急的事情。
+不要钻牛角尖，把时间花在没有结果的事情上。
+
+除了四象限，常用的时间管理方法还有 GTD 和番茄工作法。这些大家都应该了解下，但是也不用生搬硬套，而是要最终建立一套自己的工作方法。可以借助一些工具（比如我用的 Doit.im），学会规划好自己每天、每周以及更长期的任务。
+
 ## 项目管理
 
+项目管理是一个很大的话题，很多人觉得项目经理才需要学这个，但其实对于前端工程师，了解一些项目管理的原则和方法，是很有帮助的。
+
+比如说任务分解，看上去是很简单的事情，但要做好并不容易。任务分解的一个基本原则是 MECE 原则（相互独立、完全穷尽），也就是任务之间不能有重叠，并且不能遗漏。对于开发任务，按照垂直的功能去划分任务（即分成一个个完全独立的小功能），按照水平的分层去划分任务（即分成前端、服务层、数据层等），会有很不相同的效果。但怎么分解好，也是要具体问题具体分析，不能一概而论。
+
+我们做任何事情，其实都需要在不同维度上进行任务分解。工程师应该要学会如何去分解自己的工作。比如以前我刚开始工作的时候见过不少人喜欢一下子先把代码都写完，然后再调试。结果调试，出现满屏幕的调试错误，然后花费大量的时间修改和调试。现在 IDE 比较先进，这种情况不多见了，但很多人还是习惯先写好很多代码，再去调试。常常调试、修 BUG 的时间比写代码的时间还多很多。但其实我们可以把任务继续进行分解，例如 2 天的任务，我们可以把它分解成更小的模块、甚至方法，每次实现了一部分，就去测试一下，或者写个单元测试确保这部分代码正确了，再去做下一个小任务。TDD 也是这种理念，不过它把写单元测试放到前面去了。并且认真规划的话，大部分情况都可以确保完成每个小任务后，应用功能还是可用的，随时可以提交代码。而不是要花上一个礼拜，等整个功能全部完成才提交代码。
+
+再比如风险管理。有风险意识的工程师，会在开始任务前，仔细考虑可能遇到的各种问题，采取一定预防措施，做好沟通工作，并考虑好对策。而不是等到问题出现就手足无措，很多延迟和返工就是因为这类原因出现的。
+
+为什么优秀工程师效率会比一般工程师高很多？原因之一就是优秀工程师会用项目管理的思维去规划他们工作，采用最合适的方式去完成任务。所以工程师了解一些项目管理知识，包括WBS、MECE 原则、各种估算方法、风险管理等，对自己当前的工作也好，对未来承担更重要的职责也好，都有很大的帮助。
+
 ## 学习能力
+
+软件行业的知识和技术日新月异，作为一个软件工程师，要不想自己被淘汰，就只能不停的学习。
+
+对于工程师来讲，学习需要既有一定的广度，同时也要在某个特定方向有足够的深度。广度方面，可以定期学习一些新的知识，关注行业的最新动向。至于深度，那还是要去看书、看代码、动手实践。对于开发工程师，可以多阅读一些优秀开源项目的代码，也可以上 Leetcode，Topcoder 之类网站刷刷题，对自己的功力提升有非常大的帮助。
+
+然后就是尝试多写、多分享。一个知识，当我们尝试要去把它写成文章的时候，常常会发现我们对它还有很多不了解的地方。特别是要用通俗易懂的方式把它写下来，其实非常难，需要我们对这个知识理解的很深刻。这也是我们鼓励大家做分享的原因。
+
+除了自己专业的知识，大家也不妨多了解些其他专业和行业，比如经济、历史、财务、运营等方面的内容。学习多种思维模型，避免手里只有一把锤子，然后把所有问题都看成是钉子。
