--- a/低代码平台架构~理念设计规划.md
+++ b/低代码平台架构~理念设计规划.md
@@ -3,4 +3,4 @@
 零代码、低代码的概念在整个全球行业内已经流行了很长一段时间，在以前人们对于低代码的概念往往还只是在那种建站系统的二次开发上，能够通过某个商城的PHP系统，
 一键安装或者卸载某个已经写好的模块，这恐怕是早期大多数人对于低代码的认识。而笔者本人刚开始做程序员的时候便是一名这样的PHP开发人员，那个时候我还没有开始做前端。  
 
-而随着时间慢慢的发展，越来越来的企业开始具有类似的中台业务需求，使得原本已经沉寂的低代码领域开始重新焕发生机。
+而随着时间慢慢的发展，越来越来的企业开始具有类似的中台业务需求，使得原本已经沉寂的低代码领域开始重新焕发生机（主要是闻到了商业的气息^_^）。
