--- a/低代码平台架构~理念设计规划.md
+++ b/低代码平台架构~理念设计规划.md
@@ -10,4 +10,6 @@
 - 可视化模型设计
 - 可视化流程设计
 
-
+这些的共同点，使得对于使用低代码平台的人员而言，往往感受到的区别不大，他们都能够使得一个技术小白不受束缚的完成大多数业务应用的搭建。
+但是对于开发低代码平台的工程师们而言，却是截然不同的世界，对于一个想要了解和开发低代码平台的工程师而言，往往一开始就会陷入一种迷惘，在各种新的术语词汇面前不知所措，
+因此作为整个低代码平台设计规划文章的第一步，去让大家理解并清楚各个术语模块及其理念是十分重要的前提条件。
