--- a/低代码平台架构~理念设计规划.md
+++ b/低代码平台架构~理念设计规划.md
@@ -4,12 +4,20 @@
 一键安装或者卸载某个已经写好的模块，这恐怕是早期大多数人对于低代码的认识。而笔者本人刚开始做程序员的时候便是一名这样的PHP开发人员，那个时候我还没有开始做前端。  
 
 而随着时间慢慢的发展，越来越来的企业开始具有类似的中台业务需求，使得原本已经沉寂的低代码领域开始重新焕发生机（主要是闻到了商业的气息^_^）。
-当然现在的低代码平台早就不是以前那种固定模块的安装与拆卸，而是具备更加强大的生成与渲染能力。两者之间具有一些通性：
+当然现在的低代码平台早就不是以前那种固定模块的安装与拆卸，而是具备更加强大的生成与渲染能力，当然两者之间具有一些通性如：
 
-- 可视化页面搭建
-- 可视化模型设计
-- 可视化流程设计
+- 可视化页面搭建：通过简单的拖拽完成应用页面开发，对前端技能没有要求或不需要特别专业的了解。
+- 可视化模型设计：与业务相关的数据存储变得更容易理解，甚至大多数简单场景可以做到表单即模型，模型字段的类型更加业务化。
+- 可视化流程设计：不管是业务流程还是审批流程，都可以通过简单的点线连接来进行配置
 
 这些的共同点，使得对于使用低代码平台的人员而言，往往感受到的区别不大，他们都能够使得一个技术小白不受束缚的完成大多数业务应用的搭建。
 但是对于开发低代码平台的工程师们而言，却是截然不同的世界，对于一个想要了解和开发低代码平台的工程师而言，往往一开始就会陷入一种迷惘，在各种新的术语词汇面前不知所措，
 因此作为整个低代码平台设计规划文章的第一步，去让大家理解并清楚各个术语模块及其理念是十分重要的前提条件。
+
+## 什么是低代码(low-code)?
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/c7810cec8fbf4fb691da4e8a29612017.png" />
+
+简单点来说，低代码是一个可视化的平台
+
+## 低代码平台的组成成分
