--- a/低代码平台架构~理念设计规划.md
+++ b/低代码平台架构~理念设计规划.md
@@ -18,6 +18,9 @@
 
 <img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/c7810cec8fbf4fb691da4e8a29612017.png" />
 
-简单点来说，低代码是一个可视化的平台
+简单点来说，低代码是一个可视化的平台，他提供了一些点、线、面的操作，使得用户可以通过这些基本的操作来完成一个业务系统功能的搭建，
+同时也不需要用户关注任何的实现逻辑也仅仅需要关注业务本身，甚至你无需去关注其部署运维等一系列操作，当你搭建完成即可立即使用。
 
 ## 低代码平台的组成成分
+
+## 低代码平台的生态能力
