--- a/低代码平台架构~理念设计规划.md
+++ b/低代码平台架构~理念设计规划.md
@@ -27,7 +27,7 @@
 知悉其大致如何去实现以及其能够去实现什么？，可能通过这句话你已经猜到了，低代码并不能够完全根据你的想法去实现对应的业务能力，他所能做的更多是根据各个积木的组成而完成整个系统的搭建，
 他更像一个堆积木的游戏。
 
-### 设计器
+## 设计器
 
 
 ## 低代码平台的生态能力
