--- a/低代码平台架构~理念设计规划.md
+++ b/低代码平台架构~理念设计规划.md
@@ -25,7 +25,13 @@
 
 首先，我们开始介绍一下一个低代码平台的各个组成模块，以使我们对于整个低代码平台的构建有一个整体的认识。对其整体的功能能力有一个大概的认知，
 知悉其大致如何去实现以及其能够去实现什么？，可能通过这句话你已经猜到了，低代码并不能够完全根据你的想法去实现对应的业务能力，他所能做的更多是根据各个积木的组成而完成整个系统的搭建，
-他更像一个堆积木的游戏。
+他更像一个堆积木的游戏。通常来说一个低代码平台往往包括以下组成部分：
+
+- 设计器：
+- 物料组件：
+- 编排模块：
+- 渲染模块：
+- 出码器：
 
 ## 设计器
 
