--- a/低代码平台架构~理念设计规划.md
+++ b/低代码平台架构~理念设计规划.md
@@ -25,11 +25,11 @@
 
 首先，我们开始介绍一下一个低代码平台的各个组成模块，以使我们对于整个低代码平台的构建有一个整体的认识。对其整体的功能能力有一个大概的认知，
 知悉其大致如何去实现以及其能够去实现什么？，可能通过这句话你已经猜到了，低代码并不能够完全根据你的想法去实现对应的业务能力，他所能做的更多是根据各个积木的组成而完成整个系统的搭建，
-他更像一个堆积木的游戏。通常来说一个低代码平台往往包括以下组成部分：
+他更像一个堆积木的游戏。通常来说一个低代码平台往往包括以下基本组成部分：
 
-- 设计器：
-- 物料组件：
-- 编排组件：
+- 设计器：设计器是综合的载体，即通过我们所见到的低代码编辑器页面本身
+- 物料组件：物料组件是最基本的低代码平台组成元素，例如段落、表单、表格、弹窗等等UI元素
+- 编排组件：编排组件提供了将基本的物料元素进行组装的能力，比如将多个Input框组装成一个完成的表单
 - 画布：
 - 出码器：
 
