--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -30,10 +30,14 @@
 - 设计器：设计器是综合的载体，即通过我们所见到的低代码编辑器页面本身
 - 物料组件：物料组件是最基本的低代码平台组成元素，例如段落、表单、表格、弹窗等等UI元素
 - 编排组件：编排组件提供了将基本的物料元素进行组装的能力，比如将多个Input框组装成一个完成的表单
-- 画布：
-- 出码器：
+- 画布：画布用于实现组件的拖拽，这是低代码可视化效果的预览
+- 出码器：出码器负责将在画布已经组装好的物料生成具体的代码
 
 ## 设计器
+
+
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/image.png" />
 
 
 ## 低代码平台的生态能力
