--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -35,7 +35,8 @@
 
 ## 设计器
 
-低代码的设计器是一个比较宽泛的概念
+低代码的设计器是一个比较宽泛的概念，一般情况下来讲，设计器是一个如下图所示的可视化平台，即是我们所使用的低代码编辑器本身。设计器是一个容器平台，他承载了整个低代码的搭建与配置能力。
+
 
 <img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/image.png" />
 
