--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -35,10 +35,16 @@
 
 ## 设计器
 
-低代码的设计器是一个比较宽泛的概念，一般情况下来讲，设计器是一个如下图所示的可视化平台，即是我们所使用的低代码编辑器本身。设计器是一个容器平台，他承载了整个低代码的搭建与配置能力。
+低代码的设计器是一个比较宽泛的概念，一般情况下来讲，设计器是一个如下图所示的可视化平台，即我们所使用的低代码编辑器本身。设计器是一个容器平台，他承载了整个低代码的搭建与配置能力。
 
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/image%20(2).png" />  
 
-<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/image.png" />
+通常来说一个设计器往往具备如下模块：
+
+- 物料与大纲面板：用于物料组件摆放，我们可以接入平台或者开发自己的物料的组件，所提供的物料将用于后续的画布预览与出码器用于代码生成
+- 画布：
+- 插件：
+- 设置器：
 
 
 ## 低代码平台的生态能力
