--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -42,7 +42,7 @@
 通常来说一个设计器往往具备如下模块：
 
 - 物料与大纲面板：用于物料组件摆放，我们可以接入平台或者开发自己的物料的组件，所提供的物料将用于后续的画布预览与出码器用于代码生成
-- 画布：
+- 画布：画布用于组件的可视化拖拽拼装，为我们呈现初步的实际效果预览与拼装操作功能
 - 插件：
-- 设置器：
+- 设置器：设置器位于整个设计器最右侧，它是物料属性和用户交互的重要途径，他定义了物料组件的样式、文本内容、
 
