--- a/低代码平台发展现状一览.md
+++ b/低代码平台发展现状一览.md
@@ -1,1 +1,5 @@
+## 前言
 
+关于为什么要写这篇文章？，一来这是对自己先前“低代码概念与术语”那篇的补充，以更加形象化描述低代码现有的发展状态。二来，由于低代码是一个比较宽泛的概念，
+并不是拥有可视化编辑器的平台才能够被称之为低代码，现在市场上同样有许多动态配置的低代码平台，比如通过JSON配置来实现低代码同样是一种方法。
+因此写这篇文章的目的，是为了将目前市面上比较主流的一些低代码平台进行综合比较，以使自己对低代码未来的发展有一个更为清晰的认知。
