--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -54,3 +54,13 @@
 
 ## 出码器
 
+### 出码器介绍
+
+所谓出码，即将低代码编排出的`物料(schema)`进行解析并转换成最终可执行的代码的过程。出码是为了更高效的运行和更灵活地定制渲染，通过来讲出码分为三种不同的形势：
+
+- 浏览器出码：在浏览器即时出码，适用于小型即时需求，即刻出码即刻使用
+- 服务端出码：通过服务端脚本，在服务器上自动出码，适用于自动构建并部署发布
+- 自定义出码：在一个大型项目中，往往需求也更为复杂，我们也许需要支持客户端出码并自动发布也同样需要支持对应的服务端操作，此时便需要更为强大的自定义功能
+
+### 出码原理
+
