--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -64,5 +64,6 @@
 
 ### 出码原理
 
-
+首先在介绍出码器出码的原理之前，我们需要先介绍另外一个东西`数据源引擎`。什么是`数据源引擎`？，每一个低代码引擎都需要一个用于保存物料、画布、用户操作数据的地方，
+而这便是`数据源引擎`。出码器遵守数据源引擎协议，每当用户执行出码操作时，出码器会调用数据源引擎的控制器函数，读取里面的schema物料数据信息，在基于JSON等数据源进行操作并生成对应的代码。
 
