--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -56,7 +56,7 @@
 
 ### 出码器介绍
 
-所谓出码，即将低代码编排出的`物料(schema)`进行解析并转换成最终可执行的代码的过程。出码是为了更高效的运行和更灵活地定制渲染，通过来讲出码分为三种不同的形势：
+所谓出码，即将低代码编排出的`物料(schema)`进行解析并转换成最终可执行的代码的过程。出码是为了更高效的运行和更灵活地定制渲染，通长来讲出码分为三种不同的形势：
 
 - 浏览器出码：在浏览器即时出码，适用于小型即时需求，即刻出码即刻使用
 - 服务端出码：通过服务端脚本，在服务器上自动出码，适用于自动构建并部署发布
