--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -48,6 +48,22 @@
 
 ## 物料组件
 
+### 物料简述
+
+我们将如下图设计器页面的基本UI组件称之为物料，物料是页面搭建的原料，按照粒度可分为组件、区块和模板：
+
+- 组件：组件是页面搭建最小的可复用单元，其只对外暴露配置项，用户无需感知其内部实现；
+- 区块：区块是一小段符合低代码协议的 schema，其内部会包含一个或多个组件，用户向设计器中拖入一个区块后可以随意修改其内部内容；
+- 模板：模板和区块类似，也是一段符合低代码协议的 schema，不过其根节点的 componentName 需固定为 Page，它常常用于初始化一个页面；
+
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/%E6%88%AA%E5%B1%8F2022-08-24%2011.56.25.png" />
+
+### 使用物料
+
+
+
+
 ## 编排组件
 
 ## 画布
