--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -61,10 +61,17 @@
 
 ### 使用物料
 
-
+物料的定义需要遵守相应的物料协议，通常低代码平台对一个物料会有如下常见约束：形状、方向、大小、数据源、属性等等，通过物料协议的审核之后，
+我们便可以将自己对应的物料注册到物料库之中，从而得以开始使用这个物料。当然这通常是一个最简单的物料的实现，对于一个相对复杂的物料，比如区块容器，
+我们还需要支持对其他物料的嵌入交互等更加复杂的逻辑。
 
 
 ## 编排组件
+
+从本质上来说，编排组件是一种更加高级的物料组件，与基本的表单、段落、文本等常见单一物料相比，编排组件往往是一个容器，通常来讲，一个编排组件往往如下图所示，
+具有不同的区块，每一个区块都是一个单独的容器可以用于包含其他的物料组件，与普通的物料所更加不同的是，编排组件通常具有生命周期，而这其实与现在的SPA框架的组件生命周期是一致的。
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/%E6%88%AA%E5%B1%8F2022-08-24%2014.03.49.png" />
 
 ## 画布
 
