--- a/低代码平台架构~理念设计与术语解析.md
+++ b/低代码平台架构~理念设计与术语解析.md
@@ -75,6 +75,14 @@
 
 ## 画布
 
+画布是整个低代码编辑器中最为核心的视觉元素，一个画布由物料组件与组件数据共同组成，而其实现则通常由渲染层与适配层共同组成，渲染层成可以理解为React的Virtual DOM一样，
+负责将物料的schema数据渲染成实际的视觉元素。而其渲染的方式也要区分不同的情况，比如预览渲染和设计模式渲染，预览渲染只需要在画布上生成一个UI的预览效果即可，他们并不是实际的
+React Component代码，而设计模式渲染则不同，其本质上便是一个实质的React页面，也因此他支持更加的功能例如：事件绑定、国际化、UI交互等等，当然设计模式渲染也需要更加的性能消耗，
+因为其本质上即是实质的React页面组件
+
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/%E6%88%AA%E5%B1%8F2022-08-24%2014.13.18.png" />
+
 ## 出码器
 
 ### 出码器介绍
