--- a/低代码平台发展现状一览.md
+++ b/低代码平台发展现状一览.md
@@ -10,7 +10,15 @@
 <img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/image%20(1).png" />
 
 阿里的低代码引擎是一个开源的低代码引擎，他提供了低代码最为核心的引擎功能，但是并不提供在此之上的物料组件与页面排版，这些功能需要开发者自行开发。
-低代码引擎的 Demo 可以通过如下永久链接访问到：<a href="https://lowcode-engine.cn/demo">https://lowcode-engine.cn/demo</a>
+低代码引擎的 Demo 可以通过如下永久链接访问到：<a href="https://lowcode-engine.cn/demo">https://lowcode-engine.cn/demo</a>，
+总得来说，这个低代码引擎是一个具备强大定制扩展能力的低代码设计器研发框架，我们在此之上开发自己的低代码平台，但是他并不是一个可以开箱即用的平台。
+因此我们仍然有许多开发的工作量。
+
+## <a href="https://aisuda.bce.baidu.com/amis/zh-CN/docs/start/getting-started">百度amis</a>
+
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/%E6%88%AA%E5%B1%8F2022-08-24%2015.02.54.png" />
+
+
 
 
 
