--- a/低代码平台发展现状一览.md
+++ b/低代码平台发展现状一览.md
@@ -18,6 +18,19 @@
 
 <img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/%E6%88%AA%E5%B1%8F2022-08-24%2015.02.54.png" />
 
+百度amis是一个基于JSON配置的低代码框架，他具有以下的有优点：
+
+- 提供完整的界面解决方案：其它 UI 框架必须使用 JavaScript 来组装业务逻辑，而 amis 只需 JSON 配置就能完成完整功能开发，包括数据获取、表单提交及验证等功能，做出来的页面不需要经过二次开发就能直接上线；
+- 大量内置组件（120+），一站式解决：其它 UI 框架大部分都只有最通用的组件，如果遇到一些稍微不常用的组件就得自己找第三方，而这些第三方组件往往在展现和交互上不一致，整合起来效果不好，而 amis 则内置大量组件，包括了富文本编辑器、代码编辑器、diff、条件组合、实时日志等业务组件，绝大部分中后台页面开发只需要了解 amis 就足够了；
+- 支持扩展：除了低代码模式，还可以通过 自定义组件 来扩充组件，实际上 amis 可以当成普通 UI 库来使用，实现 90% 低代码，10% 代码开发的混合模式，既提升了效率，又不失灵活性；
+- 容器支持无限级嵌套：可以通过嵌套来满足各种布局及展现需求；
+- 经历了长时间的实战考验：amis 在百度内部得到了广泛使用，在 6 年多的时间里创建了 5 万页面，从内容审核到机器管理，从数据分析到模型训练，amis 满足了各种各样的页面需求，最复杂的页面有超过 1 万行 JSON 配置。
+
+总得来说，百度的amis框架提供了一个更加优秀的开箱即用的功能，我们可以在此基础上更加快速的开发自己的物料组件，但同时在可扩展能力上，他就并没有那么强大了。
+
+## <a href="http://doc.jeecg.com/2043868">jeecgboot</a>
+
+
 
 
 
