--- a/低代码平台发展现状一览.md
+++ b/低代码平台发展现状一览.md
@@ -30,6 +30,13 @@
 
 ## <a href="http://doc.jeecg.com/2043868">jeecgboot</a>
 
+<img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/img/%E6%88%AA%E5%B1%8F2022-08-24%2015.43.33.png" />
+
+与前面两者所不同的是，jeecg-boot并不是一个严格意义上的由低代码编辑器所构建的低代码平台，他是一个类似PHP二次开发概念的代码一键式生成的低代码平台，
+其强大支出在于对于后台的Spring框架与前端的Vue3、React等最新技术都有着良好的支持，当然他也支持一定程度上的低代码编辑功能。总得来说jeecg-boot更像是一个零件工厂，
+开发者可以按照自己的需求和已有的零件做配对，然后安装自己所需要的模块。
+
+## 
 
 
 
