--- a/低代码平台发展现状一览.md
+++ b/低代码平台发展现状一览.md
@@ -55,3 +55,9 @@
 ## <a href="https://github.com/Budibase/budibase">budibase</a>
 
 
+## 总结
+
+总来的说，目前市面上各种各样的低代码平台五花八门，由于低代码本身是一个较为宽泛的概念，他并没有严格的术语协议去约束他的实现，所以各自的实现更多是为了满足其自身的需求而来的。
+当然如果将每一个不同的平台的功能将之做一个综合的总结的话，那么阿里的低代码引擎提供了最为强大的底层引擎功能支持，这是后续所有扩展的压舱石，而百度amis这种的低代码平台则提供了
+更加贴近实际的组件物料，免去了我们很多开发上的工作量，而像政采云这样的低代码平台，则已经能够在商业化运作上给我们提供更加优秀的数据监测、性能分析等可视化的数据指标，为其更加稳定成熟化的运作提供了支持，最后类似易企秀、京东通天塔这样的平台则为我们提供了更好的商业化运作思路。毕竟做低代码本身，其最大的目标是为了减少研发成本，从另一方面来说也是减少对于不熟悉开发技术人员的使用成本。
+
