--- a/低代码平台发展现状一览.md
+++ b/低代码平台发展现状一览.md
@@ -47,7 +47,7 @@
 
 <img src="https://github.com/Panda-Hope/panda-hope.github.io/blob/master/static/img/%E6%88%AA%E5%B1%8F2022-08-24%2016.01.24.png" />
 
-
+与前两者类似微撘同样是一个模块化代码生成平台，但是与之有所区别的是，微撘支持小程序的构建。
 
 ## <a href="https://h5.luban-h5.com/">政采云 鲁班</a>
 
@@ -56,9 +56,6 @@
 鲁班是一个基于业务组件快速生成页面的搭建系统，其采用静态化方案，使得渲染及访问速度更快，同时采用Nginx直接转发的方案，页面路由可用性保障及响应性能更具优势，
 同时支持更健壮的容灾方案，支持快速发版、回滚等。与其他低代码平台的优势在于，鲁班在对于埋点、性能监测与投放管理上面做的更加完善，笔者本人在政采云面试的时候就被其主管
 安利介绍了很多，哈哈哈，确实从介绍中能够感受到鲁班系统在对于整个的性能处理上是花了很多的心思的。
-
-
-## <a href="https://github.com/Budibase/budibase">budibase</a>
 
 
 ## 总结
